--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,8 +2,9 @@
 
   <b><a class="navbar-brand">Cine-APP</a></b>
   <div>
-    <button type="button" class="btn btn-light" [routerLink]="['/registro-usuario']"> Registrar Usuario</button>
-    <button type="button" class="btn btn-light" [routerLink]="['/login']">Login</button>
+    <button *ngIf="!isAuth()" type="button" class="btn btn-light" [routerLink]="['/registro-usuario']"> Sign-in</button>
+    <button *ngIf="!isAuth()" type="button" class="btn btn-light" [routerLink]="['/login']">Login</button>
+    <button *ngIf="isAuth()" type="button" class="btn btn-light" (click)="logOut()" >Log-out</button>
   </div>
 
 </nav>
